<?xml version="1.0"?>
<package>
  <name>dynamics</name>
  <version>0.0.0</version>
  <description>Playing Around with Dynamics</description>

  <maintainer email="christopher.silvia@gmail.com">Christopher Silvia</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
